--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@ body{
     color: aquamarine;
 
 }
-.key.playing {
+.playing {
     transform: scale(1.1);
     transition: transform 0.1s ease;
-  }
+    border-color: orange;
+}
